# kg4ai-community_detection

./: .gitignore  README.md  planning.md  prompt.txt  pyproject.toml  requirements.txt
community_analysis/: analisar_comunidades.py  analise_comunidades_leiden_mistral.md  analise_comunidades_leiden_mistral_detailed.json
community_analysis/outputs/: gpt-analise_comunidades_leiden.md  gpt-analise_comunidades_leiden_detailed.json  llama-analise_comunidades_leiden.md  llama-analise_comunidades_leiden_detailed.json  mistral-analise_comunidades_leiden.md  mistral-analise_comunidades_leiden_detailed.json
community_detection/: communities_categorized.json  compare.ipynb
community_detection/controller/: full_run.py  run.py
community_detection/evaluation/: analyze_graph.py  community_metrics.py  community_report_extension.py  evaluator.py  graph_metrics.py  reporter.py  reporter_config.py
community_detection/methods/: backup.py  base.py  infomap_detector.py  kmeans_detector.py  leiden_detector.py  louvain_detector.py
community_detection/output/: infomap.json
community_detection/utils/: graph_utility.py  logger.py  metrics_status.py  run_manager.py  time.py
community_detection/visualization/: community_namer.py  (+3 more)
notebook/: distance_metrics.ipynb  exploration.ipynb  extract_categories.ipynb  extract_links.ipynb  macrographs.ipynb  nq_dataset copy.ipynb  nq_dataset.ipynb  nq_dataset_hpmocd.ipynb  nq_dataset_infomap.ipynb  nq_dataset_infomap_first_test.ipynb  nq_dataset_louvain.ipynb  nq_dataset_louvain_first_test.ipynb  wiki_clustering.ipynb  wiki_comparison.ipynb
(+111 files in other folders)
