[tool.poetry]
name = "kg4ai-community-detection"
version = "0.1.0"
description = ""
authors = ["zeneto <josealmeidaneto2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
infomap = "2.8.0"
leidenalg = "0.10.2"
matplotlib = "3.10.6"
networkx = "3.5"
numpy = "2.3.3"
pandas = "2.3.3"
python-igraph = "0.11.9"
python-louvain = "0.16"
scikit-learn = "1.7.2"
sentence-transformers = "5.1.0"
umap-learn = "0.5.9.post2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
